
#------------------------------------
# Description:
#  ChangeLog file for package PSCalib
#------------------------------------

Package author: Mikhail Dubrovin

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V02-00-38
2022-09-14 Mikhail Dubrovin
- rename depreceted modules to *-dep
  include/CSPad2x2CalibIntensity.h, CSPadCalibIntensity.h, PnccdCalibPars.h
  src/CSPad2x2CalibIntensity.cpp, CSPadCalibIntensity.cpp, PnccdCalibPars.cpp
- include/CalibParsStore.h - cosmetic - remove blanks

Tag: V02-00-37
- fix for wrong order of git push and tag commands
Tag: V02-00-36
2022-09-13 Mikhail Dubrovin
  app/dcs - change filemode to 0o666 from 0o2666, define repositorie through the DIR_ROOT from dir_root.py
  src/GlobalUtils.py - change filemode to 0o666 from 0o2666, use logger in stead of print

Tag: V02-00-35
2022-07-01 Mikhail Dubrovin
  app/dcs - use dirmode=0o2775, filemode=0o2666
  app/proc_control - use mode=0o2774
  src/DCFileName.py - use mode=0o2775
  src/DCUtils.py - use mode=0o2775
  src/GlobalUtils.py - use mode=0o2777
  src/RunProcUtils.py - use mode=0o2774, 0o2664

Tag: V02-00-34
2022-06-21 Mikhail Dubrovin
- src/DCMethods.py - hide missing file warnings under verb (Vincent & Silke request)

Tag: V02-00-33
2022-06-14 Mikhail Dubrovin
- src/GlobalUtils.py - add dict_of_object_metadata

Tag: V02-00-32
2022-06-09 Mikhail Dubrovin
	modified:   src/GlobalUtils.py - use logger.debug instead of print
	modified:   src/UtilsPanelAlias.py - extend alias records with kwargs values

Tag: V02-00-31
2022-05-09 Mikhail Dubrovin
modified:
- src/UtilsPanelAlias.py - code cleaning
- src/GenericCalibPars.py - return default epix100a gain fron 0.06 keV/ADU to 1.
  - test: python Detector/examples/test-issues-2022.py 5

Tag: V02-00-30
2022-04-26 Mikhail Dubrovin
modified:
   app/dcs - add repoman.save_record_at_start, save files in ctype-dependent format