@@ -24,10 +24,8 @@
 """
 
 import sys
-import logging
-DICT_NAME_TO_LEVEL = logging._levelNames # logging._nameToLevel # {'INFO': 20, 'WARNING': 30, 'WARN': 30,...
-LEVEL_NAMES = [v for v in logging._levelNames.values() if isinstance(v,str)] #_levelToName
-STR_LEVEL_NAMES = ', '.join(LEVEL_NAMES)
+from Detector.UtilsLogging import logging, DICT_NAME_TO_LEVEL, STR_LEVEL_NAMES
+#import logging
 
 import argparse
 
@@ -73,7 +71,7 @@ if __name__ == "__main__":
     s = 'Arguments:'
     for k,v in vars(args).items(): s += '  %12s : %s' % (k, str(v))
 
-    logging.basicConfig(format='[%(levelname).1s] L%(lineno)04d: %(message)s', datefmt='%Y-%m-%dT%H:%M:%S', level=DICT_NAME_TO_LEVEL[args.loglev])
+    logging.basicConfig(format='[%(levelname).1s] L%(lineno)04d: %(filename)s %(message)s', datefmt='%Y-%m-%dT%H:%M:%S', level=DICT_NAME_TO_LEVEL[args.loglev])
     logging.debug('Logger is initialized for level %s' % args.loglev)
     logging.info(s)
 
