@@ -9,6 +9,14 @@ Package author: Mikhail Dubrovin
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V02-00-39
+2022-09-19 Mikhail Dubrovin
+- src/GlobalUtils.py - add method python_version_major
+- import from Detector.UtilsLogging to fix issue for py3 as default
+  - app/geometry_convert
+  - src/UtilsConvertCrystFEL.py
+  - src/UtilsConvert.py - fix nseg int after division
+
 Tag: V02-00-38
 2022-09-14 Mikhail Dubrovin
 - rename depreceted modules to *-dep
